# klingon_deps

./: .gitattributes  .gitignore  .gitignore-20240814-141206  .klingon_user.yaml  .releaserc.js  .releaserc.json  Makefile  README.md  build_env.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: labeller.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  documentation_issue.md  feature_request.md
.github/workflows/: 00_labeller.yaml  01_auto_pr.yaml  02_pre_release.yaml.yaml  03_full-release.yaml  auto-pr.yaml  labeller.yaml  pr_body_gen.py  release.yaml  release.yml  semantic-release.sh
klingon_deps/: .klingon_pkg_deps.yaml  cli.py
scripts/: latest_pip_versions.sh
tests/: test_basic.py  test_klingon_deps.py
