[tool.poetry]
name = "klingon-deps"
version = "0.1.0"
description = "A Python library for managing project dependencies across multiple programming languages and platforms"
authors = ["David Hooton <klingon_deps+david@hooton.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/djh00t/klingon-deps"
repository = "https://github.com/djh00t/klingon-deps"
keywords = ["dependencies", "language-detection", "klingon tools"]
classifiers = ["Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.0"
PyYAML = "^6.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.0"
yapf = "^0.32.0"
mypy = "^0.960"

[tool.poetry.scripts]
klingon-deps = "klingon_deps.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = [ "py39", "py310", "py311", "py312"]
include = "\\.pyi?$"
exclude = "\\.eggs|\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist"

[tool.flake8]
max-line-length = 79
verbose = 3

[tool.pylint."MESSAGES CONTROL"]
disable = ["import-error"]

[tool.pylint.FORMAT]
max-line-length = 79

[tool.yapf]
based_on_style = "google"
column_limit = 79
dedent_closing_brackets = true
coalesce_brackets = true
spaces_before_comment = 4
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = ["temp/**/*.py", "temp2/*.py"]

[tool.mypy]
exclude = "tmp/"

[tool.semantic_release]
version = "0.1.0"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
minversion = "8.3.1"
